--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -1,7 +1,7 @@
 <title>合租房源</title>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+    <script src="../../../../Scripts/jquery-1.10.2.js"></script>
   </script>
 
 <style>
@@ -164,6 +164,6 @@
     </div>
 </body>
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/d-publicbessins.js"></script>
+    <script src="../../../../Scripts/d-publicbessins.js"></script>
 </script>
 <div id="view" style="background-color: red"></div>
