--- a/src/views/house/h-house/InterView.html
+++ b/src/views/house/h-house/InterView.html
@@ -9,6 +9,8 @@ Layout = null;
     <title>InterView</title>
     <link href="../../../../Content/Home.css" rel="stylesheet" />
     <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="../../../Content/tab-modify.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         .buttonleft{margin-left: 30px;}
         .house-img{width: 140px;height: 140px;cursor: pointer;}
@@ -81,7 +83,6 @@ Layout = null;
                 // imageurl=alldata[1].PrivateImage;
                 doc.objectQuery(gqurl, { "Id": ParentRoomid }, function (data) {
                   alldata.push(data.numberData);
-                  debugger;
                   if(alldata[1].PrivateImage!=null&&alldata[1].PrivateImage!="undefined"){
                     imageurl += alldata[1].PrivateImage;
                   }
@@ -91,7 +92,6 @@ Layout = null;
                
                   var arr=new Array();
                   if(imageurl!="undefined"&&imageurl!=null&&imageurl!=""){
-                      debugger;
                     imageurl=imageurl.substring(0,imageurl.length-1);
                     arr=imageurl.split(';');
                   }
@@ -337,7 +337,7 @@ Layout = null;
         //0 不限 1预订 4待搬入 5在租 6已到期 7 已退租 8以作废 9 财务审核中
         if (value.Status ==1) {
             return '<div><span style="padding:10px;background-color:#1bb974;color:#ffffff;border-radius:5px;">待签约</span></div>'
-        }	
+        } 
        if (value.Status == 4) {
            return '<div><span style="padding:10px;background-color:#1bb974;color:#ffffff;border-radius:5px;">待搬入</span></div>'
        }
@@ -483,11 +483,10 @@ function formatterzhouqi(value) {
         return util.toDateString(value.ShouldReceive, 'yyyy-MM-dd')
     }
     function reflash(){
-        debugger;
         
         LoadData(paraid,paraParentRoomid,paralayerindex);
     }
-</script>
+    </script>
 </head>
 
 <body>
@@ -524,19 +523,21 @@ function formatterzhouqi(value) {
             <li class="layui-this" lay-id="111">房源信息</li>
             <li lay-id="222">租客合同</li>
             <li lay-id="333">业主合同</li>
-            <li lay-id="444">日志</li>
+            <li lay-id="444" class="iframe">日志</li>
         </ul>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show" style="padding: 10px;overflow: hidden;">
                 <script id="housescript" type="text/html">
+                  <div class="tab-title">
+                    <div class="obj-title">
+                      <span>房间信息</span>
+                      <a class="layui-btn  layui-btn-radius layui-btn-warm buttonleft">编辑</a>
+                    </div>
+                  </div>
                     {{# var setter = layui.setter; var doc= layui.htcsLG, imgurl1 = setter.imgurl;}}
                          <form class="layui-form layui-form-pane hcs-form" action=""> 
                           <input type="text" name="Id" id="Id" autocomplete="off" class="layui-input" value="{{d[1].Id}}" style="display:none" /> 
-                          <div class="wrap"> 
-                           <div class="title"> 
-                            <h3 class="red"> 房间信息 <a class="layui-btn  layui-btn-radius layui-btn-warm buttonleft">编辑</a></h3> 
-                        
-                           </div> 
+                          <div class="wrap">
                            <div class="layui-form-item"> 
                             <div class="layui-inline"> 
                              <label class="layui-form-label" style="text-align:left;width:auto;">地址</label> 
@@ -694,6 +695,11 @@ function formatterzhouqi(value) {
             </div>
             <div class="layui-tab-item">
                 <div class="layui-tab layui-tab-brief" lay-filter="ztabletab">
+                  <div class="tab-title">
+                    <div class="obj-title">
+                      <span>租客合同</span>
+                    </div>
+                  </div>
                     <ul class="layui-tab-title" style="margin-bottom:0;">
                         <li value="0" class="layui-this" lay-id="0">全部合同</li>
                         <li value="5" class="" lay-id="5">在租合同</li>
@@ -706,6 +712,11 @@ function formatterzhouqi(value) {
             </div>
             <div class="layui-tab-item">
                 <div class="layui-tab layui-tab-brief" lay-filter="ytabletab">
+                  <div class="tab-title">
+                    <div class="obj-title">
+                      <span>业主合同</span>
+                    </div>
+                  </div>
                     <ul class="layui-tab-title" style="margin-bottom:0;">
                         <li value="0" class="layui-this" lay-id="0">全部合同</li>
                         <li value="5" class="" lay-id="5">在租合同</li>
@@ -717,6 +728,11 @@ function formatterzhouqi(value) {
                 </div>
             </div>
             <div class="layui-tab-item" style="height:700px;">
+              <div class="tab-title">
+                    <div class="obj-title">
+                      <span>日志</span>
+                    </div>
+                  </div>
                 <iframe src="" isloaded="true" frameborder="0" class="house_iframe"></iframe>
             </div>
         </div>
