--- a/src/views/house/h-house/index.html
+++ b/src/views/house/h-house/index.html
@@ -1,7 +1,7 @@
 ﻿<title>合租房源</title>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+    <script src="../../../../Scripts/jquery-1.10.2.js"></script>
   </script>
 <style>
     .layui-content{
@@ -177,6 +177,6 @@
     
 </body>
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/publicbessins.js"></script>
+    <script src="../../../../Scripts/publicbessins.js"></script>
   </script>
 <!-- <script src="../../../../Scripts/Common/CityLd.js"></script> -->
