--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -1,7 +1,7 @@
 ﻿<title>合租房源</title>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+    <script src="../../../../Scripts/jquery-1.10.2.js"></script>
   </script>
 <style>
     .layui-content{
@@ -147,5 +147,5 @@
     
 </body>
 <script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/z-publicbessins.js"></script>
+    <script src="../../../../Scripts/z-publicbessins.js"></script>
   </script>
