--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -63,10 +63,10 @@
                             </ul>
                             <div class="hover-menu">
                                 <div class="layui-btn-group">
-                                  <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.ID}}">
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.ID}}" data-tip="删除房间">
                                     <i class="layui-icon">&#xe640;</i>
                                   </button>
-                                  <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}">
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}" data-tip="编辑房间">
                                     <i class="layui-icon">&#xe642;</i>
                                   </button>
                                 </div>
@@ -86,13 +86,13 @@
                             </ul>
                             <div class="hover-menu">
                                 <div class="layui-btn-group">
-                                  <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.ID}}">
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.ID}}" data-tip="删除房间">
                                     <i class="layui-icon">&#xe640;</i>
                                   </button>
-                                  <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}">
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}" data-tip="编辑房间">
                                     <i class="layui-icon">&#xe642;</i>
                                   </button>
-                                  <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{itemtop.ID}}">
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{itemtop.ID}}" data-tip="登记租客">
                                     <i class="layui-icon">&#xe770;</i>
                                   </button>
                                 </div>
