--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -39,10 +39,10 @@
                     </ul>
                     <div class="hover-menu">
                         <div class="layui-btn-group">
-                          <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.Id}}">
+                          <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.Id}}" data-tip="删除房间">
                             <i class="layui-icon">&#xe640;</i>
                           </button>
-                          <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.Id}}">
+                          <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.Id}}" data-tip="编辑房间">
                             <i class="layui-icon">&#xe642;</i>
                           </button>
                         </div>
@@ -62,13 +62,13 @@
                     </ul>
                     <div class="hover-menu">
                         <div class="layui-btn-group">
-                          <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.Id}}">
+                          <button class="layui-btn layui-btn-primary layui-btn-sm deletedepent" id="deletedepent-{{itemtop.Id}}" data-tip="删除房间">
                             <i class="layui-icon">&#xe640;</i>
                           </button>
-                          <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.Id}}">
+                          <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.Id}}" data-tip="编辑房间">
                             <i class="layui-icon">&#xe642;</i>
                           </button>
-                          <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{itemtop.Id}}">
+                          <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{itemtop.Id}}" data-tip="登记租客">
                             <i class="layui-icon">&#xe770;</i>
                           </button>
                         </div>
