--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -86,9 +86,9 @@
                                   <button class="layui-btn layui-btn-primary layui-btn-sm viewdepent" id="viewdepent-{{itemtop.ID}}" data-tip="预览">
                                     <i class="layui-icon">&#xe615;</i>
                                   </button>
-                                  <!-- <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}" data-tip="合同列表">
-                                    <i class="layui-icon">&#xe642;</i>
-                                  </button> -->
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm listdepent" id="listdepent-{{itemtop.ID}}" data-tip="合同列表">
+                                    <i class="layui-icon">&#xe63c;</i>
+                                  </button>
                                   <button class="layui-btn layui-btn-primary layui-btn-sm more-opes" data-tip="更多操作">
                                     <i class="layui-icon">&#xe65f;</i>
                                   </button>
@@ -116,9 +116,9 @@
                                   <button class="layui-btn layui-btn-primary layui-btn-sm viewdepent" id="viewdepent-{{itemtop.ID}}" data-tip="预览">
                                     <i class="layui-icon">&#xe615;</i>
                                   </button>
-                                  <!-- <button class="layui-btn layui-btn-primary layui-btn-sm editdepent" id="editdepent-{{itemtop.ID}}" data-tip="合同列表">
-                                    <i class="layui-icon">&#xe642;</i>
-                                  </button> -->
+                                  <button class="layui-btn layui-btn-primary layui-btn-sm listdepent" id="listdepent-{{itemtop.ID}}" data-tip="合同列表">
+                                    <i class="layui-icon">&#xe63c;</i>
+                                  </button>
                                   <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{itemtop.ID}}" data-tip="添加合同">
                                     <i class="layui-icon">&#xe770;</i>
                                   </button>
